# ceres_example

./: CMakeLists.txt  README.md  package.xml
ceres_ROS_docker/odom_estimation_pc/src/: lidarOptimization.cpp
ceres_docker/: Dockerfile  update_bashrc
ceres_docker/ceres_example/: CMakeLists.txt  README.md
ceres_docker/ceres_example/points/: source_bunny.txt
ceres_docker/ceres_example/src/: bunny.cpp  opti_ceres.cpp
ceres_docker/odom_estimation_pc/: CMakeLists.txt  package.xml
ceres_docker/odom_estimation_pc/include/: lidarOptimization.h
ceres_docker/odom_estimation_pc/launch/: odomEstimation_ouster.launch
points/: dest_bunny.txt
roslaunch/: odomEstimation_KITTI_dataset.launch
src/: bunny.cpp  bunny_UDQ.cpp  opti_ceres.cpp  pcl_map.cpp  pcl_map_diff.cpp
